# python-high-studies

./: README.md
abs/: mapping.py  pyproject.toml  sequencies.py
collections/: defaultdict.py  pyproject.toml
programming/: dictionnary_get_default.py  niveis.py
pydantic/: bottleneck.py  bottlenecks.json  date.py  dev-requirements.txt  example_railroad.json  jsonVLISOP35.json  requirements.txt  simulation.json  simulation.jsonschema  simulation.py  simulation_schema.py  terminal.py  terminals.json
pyjobs_parser/: parser_ vagas.md
