[tool.poetry]
name = "abs"
version = "0.1.0"
description = ""
authors = ["André Rocha <andre.rocha@enacom.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
pendulum = "^2.1.2"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
